# learn

./: .gitignore  Cargo.toml  rustfmt.toml
config/: app.toml
springboot/: Cargo.toml
springboot-logger/: Cargo.toml
springboot-logger/src/: config.rs  lib.rs
springboot-macros/: Cargo.toml
springboot-macros/src/: auto.rs  config.rs  inject.rs  lib.rs  route.rs  scope.rs
springboot-web/: Cargo.toml
springboot-web/src/: config.rs  error.rs  extractor.rs  handler.rs  lib.rs  middleware.rs
springboot/src/: application.rs  banner.rs  lib.rs
springboot/src/component/: mod.rs  service.rs
springboot/src/config/: env.rs  mod.rs  toml.rs
web/: Cargo.toml
web/src/: main.rs
web/src/common/: mod.rs  resp.rs
web/src/config/: app.toml
web/src/controller/: mod.rs  post_controller.rs
web/src/dao/: mod.rs  post_mapper.rs
web/src/model/: blog_post.rs  mod.rs
web/src/services/: blog_service.rs
