[workspace]
resolver = "2"
members = [
    "springboot", "springboot-logger",
    "springboot-macros",
    "springboot-web",
    "web"
]
[workspace.dependencies]
#axum = "0.8.0-rc.1"
axum = "0.8.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
inventory = "0.3"

thiserror = "2.0"
anyhow = "1.0"
serde = "1.0.188"
serde_json = "1.0"
tokio = "1.39"
log = "0.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2"
env_logger = "0.10"
nu-ansi-term = "0.46"
tower = "0.5"
tower-http = "0.6"
byte-unit = "5.1"

dotenvy = "0.15.7"
toml = "0.8"
serde-toml-merge = "0.3.8"

async-trait = "0.1.81"
schemars = "0.8.21"
dashmap = "6.1"
chrono = "0.4"
futures = "0.3.31"


local-ip-address = "0.6.3"
