[package]
name = "springboot-macros"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[lib]
proc-macro = true

[dev-dependencies]
springboot-web = { path = "../springboot-web" }
