[package]
name = "springboot"
version = "0.1.0"
edition = "2021"

[dependencies]
springboot-macros = { path = "../springboot-macros" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
nu-ansi-term = { workspace = true }
inventory = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true, features = ["parse"] }
serde-toml-merge = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "^3"