[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
springboot-macros = { path = "../springboot-macros" }
springboot-web = { path = "../springboot-web" }
springboot = { path = "../springboot" }
springboot-logger = { path = "../springboot-logger" }

anyhow = { workspace = true }

tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
serde = { workspace = true }
sonic-rs = "0.3"
bon = "3.3.2"
chrono = "0.4.39"
serde_json = "1.0.133"
getset = "0.1.3"
tracing-subscriber = "0.3.19"

[dependencies.mongodb]
version = "3.1.0"
#features = ["sync"]
